--- a/Realm-Notes/View/Base.lproj/Main.storyboard
+++ b/Realm-Notes/View/Base.lproj/Main.storyboard
@@ -19,11 +19,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" selectionStyle="gray" indentationWidth="10" reuseIdentifier="noteCell" id="UaD-JU-TqU">
+                            <tableViewCell clipsSubviews="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" selectionStyle="gray" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="noteCell" id="UaD-JU-TqU">
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="noteCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UaD-JU-TqU" id="xXM-aD-RLL">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="376" height="43.666666666666664"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -37,11 +37,6 @@
                         <barButtonItem key="leftBarButtonItem" title="Item" systemItem="add" id="MJD-ii-jhm">
                             <connections>
                                 <action selector="addNotePressed:" destination="wKX-4X-3R9" id="JnB-Oh-D1z"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="HFi-RZ-bZm">
-                            <connections>
-                                <action selector="editButtonPressed:" destination="wKX-4X-3R9" id="lsT-kq-bi4"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
